[tool.poetry]
name = "reef"
version = "0.1.0"
description = "Digital Ocean System Status Bot for Discord"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
discord = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
